chore: create openapi document
